csc416/assignment_4/tests/fail/syntaxerrors/PrintStegosaurusBreaks.ram15
class PrintStegosaurusBreaks {
    public static void main(String[] a) {
        println("
		                      /\      ,|
                     :  \  /\/ |   _
                 .\  |   :: /  | ,' |
                 | \ |   ||'/| ;'   |
                 :  \:   '// | |    |
                 :   \`.//:  ;\;    :
                 '    : : | /  `.  /___
                  \   | | `' ,   \;'   |
                 / `._; . /\      \    ;
                :      / `. \   `  ._,'
                ;      `-.'.',\/`.,:-.
                )   `       '-.\-/ \\__>
                >                `--'  ``---.
               /  .    ,              ,   <o `-.
              :               ,'      `  ______<
              : ,   \    .____..-;``--,-'
               ) -. ,'>-..,-.__,' \.-'(\
              :    : / _ /   \  - :\ _ \\,    . ,
              :  _ | \   )   / _  |:   : `._)_,)/
               )   | :`  |   :    ;| . ).__'_.-'
               :   ) ; _ ;   |   / ; _ ;
               ) - \ `^^^'   ; - \ `^^' ñ
               '^^^`         `^^^'
		");
    }
}
